0.8.0 - currently working on
- [#5197] Cleanup: Use comments instead of PHPDoc style comments in copyright block
- [#5195] Fix: Unit test failure for TranslatorRegistry in 6.2
- [#4400] Cleanup: Use strict comparisons
- [#4035] Cleanup: Use the Foo[]/tx_oelib_List<Foo> notation for @param and @var
- [#1535] Cleanup: Stop defining constants in unit tests
- [#5177] Fix: Test failure in PHPUnit 4.3
- [#5176] Change: Update maximum PHP version to 5.6
- [#5171] Fix: Fix warnings in the deprecation log
- [#5170] Feature: Port more TestingFramework changes from PHPUnit
- [#5169] Fix: Get the unit tests to green in TYPO3 CMS 6.2 again
- [#5168] Fix: Use a NullCacheBackend for the RootlineCache
- [#5167] Fix: Code indented with spaces
- [#5166] Fix: Port TestingFramework changes from the PHPUnit extension
- [#5135] Feature: Enhance the error message about missing setData
- [#5132] Feature: Add FrontEndUser.addUserGroup
- [#5114] Bugfix: Crash in AbstractMailer in PHP 5.3
- [#4155] Cleanup: Deprecate templatehelper::getFeUserUid
- [#5052] Cleanup: Deprecate TemplateHelper::createRestrictedImage
- [#5111] Feature: Check for empty or invalid e-mail addresses when sending e-mails
- [#5107] Bugfix: Drop the use of forceReturnPath
- [#5106] Change: Add more specific exceptions to Tx_Oelib_AbstractMailer::send
- [#5104] Bugfix: E-Mail attachments with file name with content from memory are read from disk
- [#5103] Bugfix: TestingFramework::cleanUp needs to discard stored e-mails
- [#5100] Feature: Add convenience function for accessing sent SwiftMails
- [#4283] Feature: Delegate to SwiftMailer
- [#5099] Cleanup: Move the require calls to inside methods
- [#5093] Bugfix: Dependency error message about Emogrifier when installing in 6.2
- [#4867] Cleanup: Use the new copyright headers
- [#5092] Feature: Add functions for moving a Geo element
- [#4910] Change: Update Emogrifier to the latest version
- [#5033] Cleanup: Move Interface/ to Classes/Interface/