@@ -3,8 +3,8 @@ if (!defined ('TYPO3_MODE')) {
 	die('Access denied.');
 }
 
-$TCA['tx_oelib_test'] = array(
-	'ctrl' => $TCA['tx_oelib_test']['ctrl'],
+$GLOBALS['TCA']['tx_oelib_test'] = array(
+	'ctrl' => $GLOBALS['TCA']['tx_oelib_test']['ctrl'],
 	'interface' => array(
 		'showRecordFieldList' => 'hidden,starttime,endtime,title,friend,owner,children,related_records,composition',
 	),
