@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#5199] Cleanup: Use $GLOBALS['TCA'] instead of $TCA
 - [#5197] Cleanup: Use comments instead of PHPDoc style comments in copyright block
 - [#5195] Fix: Unit test failure for TranslatorRegistry in 6.2
 - [#4400] Cleanup: Use strict comparisons
